policies/access-control/accessor_boutique.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-cart-redis"
  namespace: default
spec:
  selector:
    matchLabels:
      name: cartservice
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["redis-cache"]
---
