policies/access-control/accessor_network.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-user-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-mongodb", "user-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-social-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: social-graph-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["social-graph-mongodb", "social-graph-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-url-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: url-shorten-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["url-shorten-memcached", "url-shorten-mongodb"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-user-mention
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-mention-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-mention-mongodb", "user-mention-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-post-storage
  namespace: default
spec:
  selector:
    matchLabels:
      name: post-storage-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["post-storage-mongodb", "post-storage-memcached"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-user-timeline
  namespace: default
spec:
  selector:
    matchLabels:
      name: user-timeline-service
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["user-timeline-mongodb", "user-timeline-memcached"]
---
