policies/access-control/accessor_reservation.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
spec:
  {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-user-mongo
  namespace: default
spec:
  selector:
    matchLabels:
      name: user
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["mongo-user"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "access-recommend-mongo"
  namespace: default
spec:
  selector:
    matchLabels:
      name: recommendation
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["mongo-recommendation"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-rate-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: rate-db
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["memcached-rate", "mongo-rate"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-geo-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: geo
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["mongo-geo"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-reserve-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: reserve
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["memcached-reserve", "mongo-reserve"]
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: access-profile-db
  namespace: default
spec:
  selector:
    matchLabels:
      name: profile
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["memcached-profile", "mongo-profile"]
---
